--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <div class="wrapper">
             <div class="image">
-                <img src="/images/pic.jpg">
+                <img src="images/pic.jpg">
             </div>
             <div class="h1">
                 <h1 align="center">Ong Keen Nen</h1>
